Fixed footer overflow

--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -1,54 +1,52 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-.main-footer{
+.main-footer {
   background-color: rgb(255, 255, 255);
-padding:30px 0;
-display: flex;
-justify-content: center;
-
-    
+  padding: 30px 0;
+  display: flex;
+  justify-content: center;
+  max-width: 100%;
+  overflow: hidden;
 }
-.container{
-    max-width: 1170px;
-    margin: auto;
+.container {
+  max-width: 1170px;
+  margin: auto;
 }
-.container .row{
-    display: flex;
-    justify-content: center;
-     position: relative;
+.container .row {
+  display: flex;
+  justify-content: center;
+  position: relative;
 }
-.main-footer .col{
-    width: 50%;
-    padding: 0 15px;
+.main-footer .col {
+  width: 50%;
+  padding: 0 15px;
 }
-.main-footer .col h5{
-    font-size: 18px;
-    margin-bottom: 35px;
-    color: black;
-    margin-left: 35px;
-    
-
+.main-footer .col h5 {
+  font-size: 18px;
+  margin-bottom: 35px;
+  color: black;
+  margin-left: 35px;
 }
-ul{
-    list-style: none;
-    margin-bottom: 10px;
+ul {
+  list-style: none;
+  margin-bottom: 10px;
 }
-ul li a{
-    text-decoration: none;
-    color: #bbbbbb;
+ul li a {
+  text-decoration: none;
+  color: #bbbbbb;
 }
-.col p{
-    position: absolute;
-    margin: 30px;
+.col p {
+  position: absolute;
+  margin: 30px;
 }
-.logoo{
-    position: relative;
+.logoo {
+  position: relative;
 }
-.logoo img{
-    width: 150px;
-    position: absolute;
-    margin-left: -110px;
+.logoo img {
+  width: 150px;
+  position: absolute;
+  margin-left: -110px;
 }
